# compression

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark.py
benchmarks/results/: benchmark_results.json
benchmarks/samples/: long_context.txt  repeated_promt.txt  short_prompt.txt  structured_markdown.txt  whitespace_heavy.txt
src/: __init__.py
src/api/: app.py
src/ccllm/api/: __init__.py  app.py
src/ccllm/compression/: __init__.py  compressor.py  decompressor.py  dictionary.py  tokenizer.py
src/ccllm/memory/: __init__.py  memory_manager.py
src/ccllm/retrieval/: __init__.py  embedder.py  retriever.py  vector_store.py
src/ccllm/storage/: __init__.py  db.py  models.py
src/compression/: __init__.py  compressor.py  decompressor.py  tokenizer.py
src/memory/: __init__.py  memory_manager.py
src/retrieval/: __init__.py  __inti__.py  retriever.py  vector_store.py
src/storage/: __init__.py  db.py  models.py
tests/: test_api.py  test_compressor.py  test_decompressor.py  test_dictionary.py  test_embedder.py  test_integration_api.py  test_integration_compression.py  test_integration_retrieval.py  test_integration_storage.py  test_memory_manager.py  test_retriever.py  test_storage.py  test_tokenizer.py  test_vector_store.py
