[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "ccllm"
version = "0.1.2"
description = "Lossless text compression, storage, memory management, and retrieval toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Wasi Ahmad", email = "wasiahamd0569@gmail.com" }
]
keywords = ["compression", "retrieval", "memory", "storage", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic>=2.7,<3.0",
  "numpy>=2.3,<3.0",
  "scikit-learn>=1.7,<2.0",
  "uvicorn>=0.29,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.4,<0.6",
  "build>=1.2",
  "twine>=5,<6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
